Table user {
  id int [pk, increment]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password varchar [not null]
  created_at datetime
}

Table Game {
  id int [pk, increment]
  title varchar [not null]
  description text
  designer varchar
  year_released int
  number_of_users int
  estimated_time_to_play int
  age_recommendation int
  user_id int [ref: > user.id]
  created_at datetime
  average_rating float [note: 'Custom model property to calculate average rating']
}

Table Category {
  id int [pk, increment]
  name varchar [unique, not null]
}

Table GameCategory {
  game_id int [ref: > Game.id]
  category_id int [ref: > Category.id]
}

Table Picture {
  id int [pk, increment]
  url varchar [not null]
  game_id int [ref: > Game.id]
  user_id int [ref: > user.id]
  uploaded_at datetime
}

Table Rating {
  id int [pk, increment]
  score int [not null, note: 'Rating score from 1 to 5']
  game_id int [ref: > Game.id]
  user_id int [ref: > user.id]
  created_at datetime
}

Table Review {
  id int [pk, increment]
  content text [not null]
  game_id int [ref: > Game.id]
  user_id int [ref: > user.id]
  created_at datetime
}

Ref: Game.id < Rating.game_id
Ref: Game.id < Review.game_id
Ref: Game.id < Picture.game_id
Ref: user.id < Game.user_id
Ref: user.id < Rating.user_id
Ref: user.id < Review.user_id
Ref: user.id < Picture.user_id
Ref: Game.id < GameCategory.game_id
Ref: Category.id < GameCategory.category_id